--- a/index.html
+++ b/index.html
@@ -3,42 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shree Ji Homeopathic Clinic</title>
+    <title>Shree Ji Homoeopathic Clinic</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Shree Ji Homeopathic Clinic</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <section class="intro">
-            <img src="images/doctor.jpg" alt="Dr. Smith" class="doctor-img">
-            <div>
-                <h2>Welcome to Shree Ji Homeopathic Clinic</h2>
-                <p>Your trusted family doctor in town, providing compassionate care for all ages.
-                     Dr. Aanchal is dedicated to your health and well-being.</p>
-            </div>
-        </section>
-        <section class="highlights">
-            <h3>Our Services</h3>
-            <ul>
-                <li>General Consultation</li>
-                <li>Pediatrics</li>
-                <li>Vaccinations</li>
-                <li>Health Checkups</li>
-                <li>Minor Procedures</li>
+    <!-- Navigation -->
+    <nav>
+        <div class="container nav-container">
+            <div class="logo">Shree Ji Homoeopathic Clinic</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
-            <a href="services.html" class="btn">See All Services</a>
-        </section>
-    </main>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero" style="background-image: url('clinic-board.jpg');">
+        <div class="overlay">
+            <div class="container hero-content">
+                <h1>Shree Ji Homoeopathic Clinic</h1>
+                <p>Homoeopathic Physician & Consultant</p>
+                <p>Providing Natural, Safe & Effective Healthcare</p>
+                <p><strong>Dr. Aanchal, BHMS (NHMC), Delhi University</strong></p>
+                <a href="#contact" class="btn">Book Appointment</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <div class="container">
+            <h2>Our Services</h2>
+            <ul class="service-list">
+                <li>Allergy and Eczema Treatment</li>
+                <li>Rheumatoid Arthritis (RA) and Joint Pain Management</li>
+                <li>Thyroid & Hormonal Imbalance Care</li>
+                <li>Diabetes Mellitus & Blood Pressure Control</li>
+                <li>Respiratory Complaints (Asthma, Sinusitis, Bronchitis)</li>
+                <li>Anxiety, Stress & Migraine Relief</li>
+                <li>Skin Allergy and Hair Fall Treatment</li>
+                <li>Anemia and Piles Care</li>
+                <li>Women’s Health (PCOD, Menstrual Issues, Menopause)</li>
+                <li>Renal and Gallstone Management</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container about-content">
+            <img src="clinic-board.jpg" alt="Clinic Board" class="doctor-img">
+            <div class="about-text">
+                <h2>About Dr. Aanchal</h2>
+                <p><strong>BHMS (NHMC), Delhi University</strong></p>
+                <p>Dr. Aanchal is a qualified and experienced homeopathic physician dedicated to providing holistic, natural, and side-effect-free healthcare.</p>
+                <p>She specializes in treating chronic conditions such as allergies, thyroid disorders, diabetes, hypertension, migraines, and skin problems. Her personalized approach focuses on addressing the root cause, restoring balance, and improving overall well-being.</p>
+                <p>Dr. Aanchal is especially known for her expertise in <strong>women’s health</strong> and <strong>renal or gallstone management</strong>.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <div class="contact-info">
+                <div>
+                    <h3>Clinic Address</h3>
+                    <p>D-2 Sultanpuri</p>
+                    <p>Delhi, India</p>
+                </div>
+                <div>
+                    <h3>Timings</h3>
+                    <p>Morning: 10:30 AM – 1:00 PM</p>
+                    <p>Evening: 6:00 PM – 8:00 PM</p>
+                    <p>Sunday: Closed</p>
+                </div>
+                <div>
+                    <h3>Contact</h3>
+                    <p>📞 +91 9311871779</p>
+                    <p>✉️ srijishyam211022@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>© 2025 Shree Ji Homeopathic Clinic</p>
+        <div class="container">
+            <p>&copy; 2025 Shree Ji Homoeopathic Clinic. All rights reserved.</p>
+            <p class="tagline">Healing Naturally, Caring Personally.</p>
+        </div>
     </footer>
 </body>
 </html>
