--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="hero" style="background-image: url('clinic-board.jpg');">
+    <section id="home" class="hero">
         <div class="overlay">
             <div class="container hero-content">
                 <h1>Shree Ji Homoeopathic Clinic</h1>
